--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
 .container {
     text-align: center;
     width: 200px;
-    height: 230px;
-    border: 1px solid grey;
-    padding: 15px;
-    margin:10px;
+    height: 400px;
+    border: 1px solid #b5b5b5;
+    padding: 10px;
+    margin: 10px;
     border-radius: 5px;
 }
 
@@ -18,16 +18,18 @@ body {
 }
 
 button {
-    margin: 15px;
+    margin: 5px;
     background-color: #2196F3;
-    border: none;
+    border-color: #2196F3;
+    border:none;
     border-radius: 3px;
+    margin-top: 15px;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 15px;
     color:white;
+    font-size: 15px;
 }
 
 button:hover {
-    background-color:#1976D2 ;
+    background:#1976D2;
 }
