--- a/style.css
+++ b/style.css
@@ -1,35 +1,82 @@
-body {
-    justify-content: center;
-    display:flex;
+*{
+    margin: 0%;
+    padding: 0%;
+}
+.cab {
+    color: #2196F3;
+    height: 30px;
+    border-bottom: 2px solid #b5b5b5;
+    padding: 15px;
+    border-radius: 2px;
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: 5px;
 }
 
-.container {
-    text-align: center;
-    width: 200px;
-    height: 400px;
-    border: 1px solid #b5b5b5;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
-}
-
-.log {
-    text-align: left;
-}
-
-button {
-    margin: 5px;
-    background-color: #2196F3;
-    border-color: #2196F3;
-    border:none;
-    border-radius: 3px;
+.leftbutton {
+    flex-direction: column;
+    display: flex;
     margin-top: 15px;
-    cursor: pointer;
+    border-radius: 5px;
+    border-color: transparent;
+    border: none;
     transition: 0.3s;
-    color:white;
-    font-size: 15px;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 5px;
 }
 
-button:hover {
-    background:#1976D2;
+.leftbutton:hover {
+    background: #b5b5b5;
+}
+.container {
+    text-align: left;
+    width: 120px;
+    height: 300px;
+    border: 2px solid #b5b5b5;
+    padding: 15px;
+    border-radius: 2px;
+    margin-right: 20px;
+}
+
+.lenta {
+   border-radius: 5px;
+   border-color: #1976D2;
+   color: #2196F3;
+   border: 1px solid #2196F3;
+   transition: 0.3s;
+   cursor: pointer;
+   font-size: 16px;
+   padding: 5px;
+   
+}
+
+.new:hover {
+    background: #1976D2;
+}
+
+.lenta:hover {
+    background: #a2aebf;
+}
+
+.new {
+    border-radius: 5px;
+    border-color: #1976D2;
+    background-color: #2196F3;
+    color: white;
+    border: none;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 5px;
+}    
+
+.h1 {
+    display: flex;
+    gap: 15px;
+
+}
+
+h1 {
+    margin-top: -7px;
 }
